--- a/src/app/page/dashboard/item/item.html
+++ b/src/app/page/dashboard/item/item.html
@@ -1,1 +1,37 @@
-<p>item works!</p>
+<div class="container">
+    <h2>Customer Management</h2>
+
+    <div class="form-card">
+        <input type="text" id="name" placeholder="Name">
+        <input type="email" id="email" placeholder="Email">
+        <input type="text" id="phone" placeholder="Phone">
+        <input type="text" id="address" placeholder="Address">
+        <input type="date" name="" id="dob" placeholder="Birth Of Date">
+        <button onclick="addCustomer()">Add Customer</button>
+    </div>
+
+    <div class="table-card">
+        <table>
+            <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Tittel</th>
+                    <th>Birth Of Date</th>
+                    <th>Salary</th>
+                    <th>Address</th>
+                    <th>City</th>
+                </tr>
+            </thead>
+            <tbody id="customerTable">
+                <tr *ngFor="let customer of customerList">
+                    <td>{{customer.name}}</td>
+                    <td>{{customer.tittle}}</td>
+                    <td>{{customer.dobValue}}</td>
+                    <td>{{customer.salary}}</td>
+                    <td>{{customer.address}}</td>
+                    <td>{{customer.city}}</td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
+</div>
