--- a/src/app/page/dashboard/customer/customer.html
+++ b/src/app/page/dashboard/customer/customer.html
@@ -20,22 +20,22 @@
           <div class="form-row">
             <div class="form-group">
               <label for="title">Title</label>
-              <input type="text" id="title" placeholder="Mr/Ms/Dr" class="form-input">
+            <input type="text" id="title" placeholder="Mr/Ms/Dr" class="form-input"[(ngModel)]="customerObj.title">
             </div>
             <div class="form-group">
               <label for="name">Full Name </label>
-              <input type="text" id="name" placeholder="Enter customer name" class="form-input" required>
+              <input type="text"[(ngModel)]="customerObj.name" id="name" placeholder="Enter customer name" class="form-input" required>
             </div>
           </div>
           
           <div class="form-row">
             <div class="form-group">
               <label for="id">Customer ID</label>
-              <input type="text" id="id" placeholder="Auto-generated" class="form-input" >
+              <input type="text"[(ngModel)]="customerObj.id" id="id" placeholder="Auto-generated" class="form-input" >
             </div>
             <div class="form-group">
               <label for="dob">Date of Birth</label>
-              <input type="date" id="dob" class="form-input">
+              <input type="date"[(ngModel)]="customerObj.dobValue" id="dob" class="form-input">
             </div>
           </div>
         </div>
@@ -46,22 +46,22 @@
           <div class="form-row">
             <div class="form-group full-width">
               <label for="address">Address </label>
-              <input type="text" id="address" placeholder="Street address" class="form-input" required>
+              <input type="text" [(ngModel)]="customerObj.address" id="address" placeholder="Street address" class="form-input" required>
             </div>
           </div>
           
           <div class="form-row three-col">
             <div class="form-group">
               <label for="city">City</label>
-              <input type="text" id="city" placeholder="City" class="form-input">
+              <input type="text"[(ngModel)]="customerObj.city" id="city" placeholder="City" class="form-input">
             </div>
             <div class="form-group">
               <label for="Province">Province</label>
-              <input type="text" id="Province" placeholder="Province" class="form-input">
+              <input type="text"[(ngModel)]="customerObj.province" id="Province" placeholder="Province" class="form-input">
             </div>
             <div class="form-group">
               <label for="PostalCode">Postal Code</label>
-              <input type="text" id="PostalCode" placeholder="Postal Code" class="form-input">
+              <input type="text" [(ngModel)]="customerObj.postalCode" id="PostalCode" placeholder="Postal Code" class="form-input">
             </div>
           </div>
         </div>
@@ -72,7 +72,7 @@
           <div class="form-row">
             <div class="form-group">
               <label for="salary">Salary</label>
-              <input type="text" id="salary" placeholder="0.00" class="form-input">
+              <input type="text" [(ngModel)]="customerObj.salary" id="salary" placeholder="0.00" class="form-input">
             </div>
           </div>
         </div>
@@ -81,7 +81,8 @@
       <!-- Form Actions -->
       <div class="form-actions">
         <button type="reset" class="btn btn-primary">Clear</button>
-        <button type="button" class="btn btn-primary" onclick="addCustomer()">Add Customer</button>
+        <button type="button" class="btn btn-primary" (click)="addCustomer()">
+        Add Customer</button>
       </div>
     </div>
   </div>
